# CMM

./: .env.example  .gitignore  CLAUDE.md  README.md  STRUCTURE.md  TASKS.md  TODOS.md  big_restructuring_plan.md  dashboard.html  pyproject.toml  requirements.txt  run_fetch_comtrade.py  run_fetch_eurostat.py  run_fetch_ministries.py  run_fetch_realtime.py
.claude/: settings.local.json
.trash/: STRUCTURE.md  big_restructuring_plan.md  explainer.md  literature_notes.md  policy_monitor_dashboard.py  requirements.txt  run_fetch.py  run_fetch_all.py  run_fetch_batch.py  run_fetch_news.py  run_fetch_unctad.py
_remote/: run_fetch_ministries.py  run_fetch_yfinance.py
backend/: api.py  auto_refresh.py  bootstrap_db.py  cli.py  config.py  migrate_db.py  run.py  schema.sql  storage.py
background-research/: ai-mercantilism.docx  data-sources.md  rare-earths.docx
cmm.egg-info/: SOURCES.txt
customs_scraper/: bootstrap.py  config.py  db.py  debug.py  hs_codes.py  parser.py  scheduler.py
data/: china_provinces.json  commodities.json
data-ingestion-pipeline/: README.md
frontend/: chartbook.html  index.html
live/: api.py  run.py
policy_monitor/: academic.py  config.py  dashboard.py  destatis_utils.py  financial.py  ilo.py  imf_fiscal.py  ministry_scraper.py  storage.py  wto.py  yfinance_data.py
scheduler/: com.chinapolicymonitor.news.plist
tasks/: lessons.md  todo.md
tests/: test_auto_refresh.py  test_commodities.py  test_db.py  test_fiscal.py  test_fiscal_assess.py  test_fyp_demand.py  test_macro_dash.py  test_policy_pipeline.py  test_polity_calendar.py
(+207 files in other folders)
