[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Scraping / scheduling
    "scrapling>=0.4",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0",
    # Data sources
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "akshare>=1.14.0",
    "global-macro-data>=2.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11",
    "websockets>=12.0",
    # Web server
    "flask>=3.0.0",
    "waitress>=3.0.0",
    # Policy advisor
    "anthropic>=0.30.0",
]

[project.scripts]
cmm-fetch = "backend.cli:main"
cmm-serve = "backend.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]